# SDLPoP

./: Info.plist  build-appimage.sh  build-bundle.sh  build-package.sh  build.lhelper  meson.build  meson_options.txt
resources/: Info.plist.in  sdlpop.desktop
src/: meson.build  proto.h  seg009.c  types.h
